syntax = "proto3";
package pb;
option go_package = "/pb";

message Empty {
}

message CreateOrderRequest {
    string id = 1;
    float price = 2;
    float tax = 3;
}

message OrderResponse {
    string id = 1;
    float price = 2;
    float tax = 3;
    float final_price = 4;
}

message ListOrders {
    repeated OrderResponse orders = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc FindAllOrders(Empty) returns (ListOrders);
}